--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.10.19"
+
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -51,4 +53,6 @@ dependencies {
     provided 'javax.annotation:jsr250-api:1.0'
     //RxAndroid
     compile 'io.reactivex:rxandroid:1.1.0'
+
+
 }
