--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <meta-data android:name="com.inthecheesefactory.lab.glidepicasso.GlideConfiguration"
+               android:value="GlideModule"/>
+
     <application
         android:name="com.acv.gallery.GalleryApplication"
         android:allowBackup="true"
@@ -19,6 +22,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".view.activity.ImageDetailActivity"
+            android:parentActivityName=".view.activity.MainActivity">
         </activity>
     </application>
 
